Fix small device layout issue

--- a/src/styles/_chatArea.scss
+++ b/src/styles/_chatArea.scss
@@ -3,6 +3,7 @@
     background-color: rgba(115, 169, 221, 0.39);
     width: 100%;
     height: calc(100vh - 65.84px - 51.85px);
+    min-height: calc(100vh - 65.84px - 51.85px);
     overflow-x: hidden;
     overflow-y: auto;
 
