--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,6 @@ html {
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
